tools/tests/errors/class_hash_wrong_type.ki
class Bad:
    var _hash_ = Function(self):
        return "not-an-integer"
var s = {Bad()}
